--- a/src/css/_app.scss
+++ b/src/css/_app.scss
@@ -2,6 +2,10 @@ h1, h2 {
     color: #333;
     text-align: center;
     margin-bottom: 20px;
+    @media (max-width: 768px) {
+        font-size: 20px;
+        margin-top: 1rem;
+    }
 }
 
 .container {
