--- a/src/css/_dashboard.scss
+++ b/src/css/_dashboard.scss
@@ -1,35 +1,82 @@
 .dashboard {
     display: flex;
-    
+    position: relative;
+
+    .toggle-button {
+        display: none;
+        position: absolute;
+        top: -35px;
+        left: 140px;
+        background-color: $naranja-cambacua;
+        color: $main-white;
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 0.3rem;
+        cursor: pointer;
+        z-index: 1000;
+    }
+
     .sidebar {
-      width: 250px;
-      background-color: #f4f4f4;
-      padding: 20px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-  
-      ul {
-        list-style: none;
-        padding: 0;
-        
-        li {
-          margin: 10px 0;
-  
-          a {
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-  
-            &:hover {
-              color: #007bff;
+        width: 15rem;
+        background-color: $azul-cambacua;
+        padding: 20px;
+        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+        border-radius: 0px 16px 16px 0px;
+        transition: transform 0.3s ease-in-out;
+
+        ul {
+            list-style: none;
+            padding: 0;
+
+            li {
+                margin: 10px 0;
+                margin-top: 1rem;
+
+                a {
+                    text-decoration: none;
+                    color: $main-white;
+                    background-color: rgb(2, 2, 165);
+                    font-weight: bold;
+                    transition: all 0.3s;
+                    padding: 0.4rem;
+                    border-radius: 0.3rem;
+
+                    &:hover {
+                        background-color: $button-hover-cambacua;
+                    }
+                }
             }
-          }
         }
-      }
     }
-  
+
     .content {
-      flex: 1;
-      padding: 20px;
+        flex: 1;
+        padding: 20px;
     }
-  }
-  
+
+    @media (max-width: 768px) {
+        .toggle-button {
+            display: block;
+        }
+
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 30%;
+            height: 100%;
+            transform: translateX(-100%);
+            z-index: 999;
+        }
+
+        .sidebar.open {
+            transform: translateX(0);
+        }
+
+        .content {
+            margin-left: 0;
+        }
+
+        
+    }
+}
