--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,6 +62,12 @@ h1, h2 {
   text-align: center;
   margin-bottom: 20px;
 }
+@media (max-width: 768px) {
+  h1, h2 {
+    font-size: 20px;
+    margin-top: 1rem;
+  }
+}
 
 .container {
   max-width: 1200px;
@@ -117,12 +123,28 @@ form p {
 
 .dashboard {
   display: flex;
+  position: relative;
+}
+.dashboard .toggle-button {
+  display: none;
+  position: absolute;
+  top: -35px;
+  left: 140px;
+  background-color: #ff8c34;
+  color: #F5F5F5;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  z-index: 1000;
 }
 .dashboard .sidebar {
-  width: 250px;
-  background-color: #f4f4f4;
+  width: 15rem;
+  background-color: #0b369c;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  border-radius: 0px 16px 16px 0px;
+  transition: transform 0.3s ease-in-out;
 }
 .dashboard .sidebar ul {
   list-style: none;
@@ -130,54 +152,82 @@ form p {
 }
 .dashboard .sidebar ul li {
   margin: 10px 0;
+  margin-top: 1rem;
 }
 .dashboard .sidebar ul li a {
   text-decoration: none;
-  color: #333;
+  color: #F5F5F5;
+  background-color: rgb(2, 2, 165);
   font-weight: bold;
+  transition: all 0.3s;
+  padding: 0.4rem;
+  border-radius: 0.3rem;
 }
 .dashboard .sidebar ul li a:hover {
-  color: #007bff;
+  background-color: #1d5aea;
 }
 .dashboard .content {
   flex: 1;
   padding: 20px;
+}
+@media (max-width: 768px) {
+  .dashboard .toggle-button {
+    display: block;
+  }
+  .dashboard .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 100%;
+    transform: translateX(-100%);
+    z-index: 999;
+  }
+  .dashboard .sidebar.open {
+    transform: translateX(0);
+  }
+  .dashboard .content {
+    margin-left: 0;
+  }
 }
 
 .product-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin: 0.5rem;
-  gap: 0.7rem;
+  gap: 1rem;
 }
-.product-list .product-item {
-  color: rgb(66, 66, 66);
+
+.product-item {
+  color: rgb(39, 39, 39);
   font-weight: 600;
-  background-color: goldenrod;
+  background-color: rgb(191, 190, 190);
   padding: 1rem;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
-.product-list .product-item button {
+.product-item button {
   width: 7rem;
 }
-.product-list .metalinks {
+
+.metalinks {
   text-decoration: none;
   background-color: #007bff;
   color: white;
   padding: 5px 10px;
   border-radius: 5px;
 }
-.product-list .metalinks:hover {
+.metalinks:hover {
   background-color: #0056b3;
 }
-.product-list .ex-ul {
+
+.ex-ul {
   list-style: none;
   padding: 0;
 }
-.product-list .ex-ul div {
+.ex-ul div {
   padding: 10px;
   border-bottom: 1px solid #ddd;
   display: flex;
@@ -187,12 +237,12 @@ form p {
   width: 100%;
   height: 15rem;
 }
-.product-list .ex-ul div img {
+.ex-ul div img {
   object-fit: contain;
   width: 100%;
   height: 100%;
 }
-.product-list .ex-ul div button {
+.ex-ul div button {
   background-color: #007bff;
   border: none;
   color: #fff;
@@ -200,10 +250,18 @@ form p {
   border-radius: 5px;
   cursor: pointer;
 }
-.product-list .ex-ul div button:hover {
+.ex-ul div button:hover {
   background-color: #0056b3;
 }
 
+@media (max-width: 768px) {
+  .product-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0.5rem;
+    gap: 0.5rem;
+  }
+}
 .edit-product-container {
   max-width: 600px;
   margin: 2rem auto;
