--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -39,3 +39,15 @@ $color-rosado: #ff66c4;
 $color-amarillo: #ffce2b;
 //Experiencia y Profesionalismo  - 
 $color-naranja: #f38759;
+
+
+// Variables de colores basados en Material Design
+$primary-color: #0b369c;
+$primary-light: #2359d9;
+$primary-dark: #021128;
+$secondary-color: #03dac6;
+$background-color: #f5f5f5;
+$surface-color: #ffffff;
+$error-color: #b00020;
+$text-color: #212121;
+$subtext-color: #404040;
