--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,6 +7,8 @@
 @import "editProduct.scss";
 @import "menusDesplegables.scss";
 @import "filtrado.scss";
+@import "handleOrders.scss";
+
 
 * {
     margin: 0;
