--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,7 +17,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto", system-ui;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
