--- a/src/css/_app.scss
+++ b/src/css/_app.scss
@@ -1,18 +1,24 @@
-h1, h2 {
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
-    @media (max-width: 768px) {
-        font-size: 20px;
-        margin-top: 1rem;
+.app-div {
+
+    .cerrar-sesion {
+        margin: .2rem;
     }
+
+    h1, h2 {
+        color: #333;
+        margin-top: .5rem;
+        text-align: center;
+        margin-bottom: 1rem;
+        @media (max-width: 768px) {
+            font-size: 20px;
+            margin-top: 1rem;
+        }
+    }
+ 
+
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
+
 
 button {
     background-color: #007BFF;
@@ -22,7 +28,6 @@ button {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-
     &:hover {
         background-color: #0056b3;
     }
