--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,22 +57,20 @@
   background-color: #0056b3;
 }
 
-h1, h2 {
+.app-div .cerrar-sesion {
+  margin: 0.2rem;
+}
+.app-div h1, .app-div h2 {
   color: #333;
+  margin-top: 0.5rem;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
 }
 @media (max-width: 768px) {
-  h1, h2 {
+  .app-div h1, .app-div h2 {
     font-size: 20px;
     margin-top: 1rem;
   }
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
 }
 
 button {
