--- a/src/css/_handleOrders.scss
+++ b/src/css/_handleOrders.scss
@@ -1,75 +1,3 @@
-.pedido-item {
-    border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 20px;
-    background-color: $surface-color;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: $text-color;
-
-    h3 {
-        margin-top: 0;
-        font-size: 1.5em;
-        color: $primary-color;
-        font-weight: 500;
-    }
-
-    p {
-        margin: 10px 0;
-        font-size: 1em;
-        color: $subtext-color;
-        strong {
-            font-size: 1.2rem;
-        }
-    }
-
-    h4 {
-        margin-top: 15px;
-        font-size: 1.2em;
-        color: $primary-dark;
-        font-weight: 400;
-    }
-
-    ul {
-        list-style: none;
-        padding-left: 0;
-        margin: 0;
-
-        li {
-            border-bottom: 1px solid $subtext-color;
-            padding: 8px 0;
-            font-size: 1em;
-            color: $subtext-color;
-
-            &:last-child {
-                border-bottom: none;
-            }
-        }
-    }
-
-    button {
-        background-color: $primary-color;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-        padding: 12px 20px;
-        font-size: 1em;
-        cursor: pointer;
-        margin-right: 10px;
-        transition: background-color 0.3s ease;
-
-        &:hover {
-            background-color: $primary-light;
-        }
-
-        &.danger {
-            background-color: $error-color;
-            &:hover {
-                background-color: darken($error-color, 10%);
-            }
-        }
-    }
-}
-
 h2 {
     font-size: 2em;
     color: $primary-dark;
@@ -81,11 +9,9 @@ button {
     background-color: $primary-color;
     color: #fff;
     border: none;
-    border-radius: 4px;
-    padding: 12px 20px;
-    font-size: 1em;
+    border-radius: 1rem;
+    padding: .7rem;
     cursor: pointer;
-    margin-right: 10px;
     transition: background-color 0.3s ease;
 
     &:hover {
@@ -96,6 +22,45 @@ button {
         background-color: $error-color;
         &:hover {
             background-color: darken($error-color, 10%);
+        }
+    }
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 1.2rem;
+}
+
+.pedido-box {
+    border: 1px solid #ddd;
+    padding: 1.2rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+
+.pedido-actions {
+    margin-top: 1.2rem;
+    display: flex;
+    gap: 10px;
+}
+
+
+.pedido-actions button:hover {
+    background-color: #0056b3;
+}
+
+
+.pedido {
+    border-radius: 1rem;
+    background-color: lightgrey;
+    padding: 1rem;
+    max-width: 25vw;
+    li { 
+        p {
+            margin-top: .3rem;
         }
     }
 }
