--- a/src/css/main.css
+++ b/src/css/main.css
@@ -409,69 +409,6 @@ button[type=submit]:focus {
   background-color: #0056b3;
 }
 
-.pedido-item {
-  border-radius: 8px;
-  padding: 20px;
-  margin-bottom: 20px;
-  background-color: #ffffff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  color: #212121;
-}
-.pedido-item h3 {
-  margin-top: 0;
-  font-size: 1.5em;
-  color: #0b369c;
-  font-weight: 500;
-}
-.pedido-item p {
-  margin: 10px 0;
-  font-size: 1em;
-  color: #404040;
-}
-.pedido-item p strong {
-  font-size: 1.2rem;
-}
-.pedido-item h4 {
-  margin-top: 15px;
-  font-size: 1.2em;
-  color: #021128;
-  font-weight: 400;
-}
-.pedido-item ul {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-}
-.pedido-item ul li {
-  border-bottom: 1px solid #404040;
-  padding: 8px 0;
-  font-size: 1em;
-  color: #404040;
-}
-.pedido-item ul li:last-child {
-  border-bottom: none;
-}
-.pedido-item button {
-  background-color: #0b369c;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 12px 20px;
-  font-size: 1em;
-  cursor: pointer;
-  margin-right: 10px;
-  transition: background-color 0.3s ease;
-}
-.pedido-item button:hover {
-  background-color: #2359d9;
-}
-.pedido-item button.danger {
-  background-color: #b00020;
-}
-.pedido-item button.danger:hover {
-  background-color: #7d0017;
-}
-
 h2 {
   font-size: 2em;
   color: #021128;
@@ -483,11 +420,9 @@ button {
   background-color: #0b369c;
   color: #fff;
   border: none;
-  border-radius: 4px;
-  padding: 12px 20px;
-  font-size: 1em;
+  border-radius: 1rem;
+  padding: 0.7rem;
   cursor: pointer;
-  margin-right: 10px;
   transition: background-color 0.3s ease;
 }
 button:hover {
@@ -498,6 +433,41 @@ button.danger {
 }
 button.danger:hover {
   background-color: #7d0017;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 1.2rem;
+}
+
+.pedido-box {
+  border: 1px solid #ddd;
+  padding: 1.2rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+.pedido-actions {
+  margin-top: 1.2rem;
+  display: flex;
+  gap: 10px;
+}
+
+.pedido-actions button:hover {
+  background-color: #0056b3;
+}
+
+.pedido {
+  border-radius: 1rem;
+  background-color: lightgrey;
+  padding: 1rem;
+  max-width: 25vw;
+}
+.pedido li p {
+  margin-top: 0.3rem;
 }
 
 * {
