--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,7 +9,7 @@
 @import "filtrado.scss";
 @import "handleOrders.scss";
 @import "filtros.scss";
-
+@import "pedidosCompletados.scss";
 
 * {
     margin: 0;
