--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,6 +10,8 @@
 @import "handleOrders.scss";
 @import "filtros.scss";
 @import "pedidosCompletados.scss";
+@import "adminProductModal.scss";
+@import "./utils/loaderSpinner.scss";
 
 * {
     margin: 0;
